# stalker-strike

./: .env.example  .gitignore  README.md  install_termux.sh  pyproject.toml  requirements.txt  stalker.bat  stalker.sh
maigret/: Installer.bat
maigret/docs/source/: features.rst
maigret/maigret/: checking.py  report.py
stalker/: __init__.py  __main__.py  cli.py  config.py  cyber_intel.py  menu.py  pipeline.py
stalker/modules/: __init__.py  anti_scammer.py  auto_chaining.py  breach_check.py  correlation_engine.py  crt_lookup.py  crypto_tracer.py  custom_apis.py  dark_web_checker.py  dns_fix.py  domain_osint.py  email_header_forensics.py  email_intel.py  email_scanner.py  evidence_builder.py  exif_analyzer.py  face_search.py  flaresolverr.py  geofence_estimator.py  github_intel.py  google_dork.py  gravatar_lookup.py  image_downloader.py  ip_tracker.py  keyword_alert.py  linktree_detector.py  localdb.py  password_leak.py  pastebin_scraper.py  pattern_of_life.py  phone_scanner.py  proxy_manager.py  real_name_detector.py  realtime_monitor.py  recursive_search.py  reddit_analyzer.py  reverse_image.py  risk_scorer.py  social_graph.py  stealth_profile.py  (+11 more)
stalker/reporters/: __init__.py  html_generator.py  html_report.py  json_report.py  terminal.py
